# kuma-push-agent

./: .env.example  Dockerfile  README.md  config.example.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
src/kuma_push_agent/: __init__.py  config.py  logging_setup.py  main.py  scheduler.py  ssh_pool.py  uptime_kuma.py
src/kuma_push_agent/checks/: __init__.py  base.py  mariadb_via_ssh.py
tests/: test_checks.py  test_config.py  test_uptime_kuma.py
