[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kuma-push-agent"
version = "0.1.0"
description = "A Dockerized push monitoring agent for Uptime Kuma"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "paramiko>=3.4",
    "pymysql>=1.1",
    "httpx>=0.27",
    "apscheduler>=3.10,<4",
]

[project.scripts]
kuma-push-agent = "kuma_push_agent.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
